--- a/doc/02_Layout/02.md
+++ b/doc/02_Layout/02.md
@@ -1,7 +1,7 @@
 # Laporan Praktikum #2 - Layout
 
 
-(img/polinema.png)
+!(img/polinema.png)
 
 
 ## Tujuan Pembelajaran
@@ -20,23 +20,23 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
 
 
 2. Kemudian atur konfigurasi project seperti dibawah.<br>
-	a)Name: BasicAppX 
-	b)Package name: org.aplas.basicappx 
-	c)Save Location: any 
-	d)Language: Java 
-	e)Minimum API Level: API 21/Android 5.0 Lollipop 
-	f)This project will support instant apps: Uncheck 
-	g)Use android.* artifacts: Check 
+	a)Name: BasicAppX <br>
+	b)Package name: org.aplas.basicappx <br>
+	c)Save Location: any <br>
+	d)Language: Java <br>
+	e)Minimum API Level: API 21/Android 5.0 Lollipop <br>
+	f)This project will support instant apps: Uncheck <br>
+	g)Use android.* artifacts: Check <br>
    
 
 ### Task Guide 1
 
-1. Ubah isi file build.gradile pada module:app sesuai pada module kemudian klik **sync now**
+1. Ubah isi file build.gradle pada module:app sesuai pada module kemudian klik **sync gradle**
 
    ![contoh screenshot](img/Step1/1.png)<br>
    ![contoh screenshot](img/Step1/2.png)<br>
 
-2. Delete ExampleUnitTest di org.aplas.basicapp dan copy file test dan lainnya kedalam folder sesuai modul
+2. Delete ExampleUnitTest di org.aplas.basicapp dan copy file test dan lainnya kedalam folder, kemudian jalankan TestA1BasicUIX011
 
    ![contoh screenshot](img/Step1/3.png)<br>
    ![contoh screenshot](img/Step1/4.png)<br>
