--- a/doc/02_Layout/02.md
+++ b/doc/02_Layout/02.md
@@ -1,7 +1,7 @@
 # Laporan Praktikum #2 - Layout
 
 
-![](img/polinema.png)<br>
+![contoh screenshot](img/polinema.png)<br>
 
 
 ## Tujuan Pembelajaran
