--- a/doc/01_HelloWorld/01.md
+++ b/doc/01_HelloWorld/01.md
@@ -16,28 +16,28 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
 
 1. 	Buka Android Studio dan pilih Empty Activity.
 
-	![Screenshot](img/SS.3.png)<br>
+	![Screenshot](img/SS/3.png)<br>
 	
 2. 	Atur project seperti gambar dibawah.
 	
-	![Screenshot](img/SS.4.png)<br>
+	![Screenshot](img/SS/4.png)<br>
 
 3. 	Lalu buka activity_main.xml
 	
-	![Screenshot](img/SS.5.png)<br>
+	![Screenshot](img/SS/5.png)<br>
 
 4.	Atur Design sesuai yang kalian inginkan dengan drag n drop dan juga pada xml editor.
 	
-	![Screenshot](img/SS.6.png)<br>
-	![Screenshot](img/SS.7.png)<br>
+	![Screenshot](img/SS/6.png)<br>
+	![Screenshot](img/SS/7.png)<br>
 
 5. 	Setelah itu sambungkan USB(Debugging) dan klik #Run#.
 
-	![Screenshot](img/SS.8.png)<br>
+	![Screenshot](img/SS/8.png)<br>
 
 6. 	Hasil akhir project akan seperti gambar dibawah.
 	
-	![Screenshot](img/SS.9.png)<br><br>
+	![Screenshot](img/SS/9.png)<br><br>
 
 
 ### Mohammad Ferry Julyo, 2020
