--- a/doc/03_/03.md
+++ b/doc/03_/03.md
@@ -7,7 +7,7 @@
 ## Tujuan Pembelajaran 
 
 
-Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
+Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:<br>
 1.
 2.
 3.
