--- a/doc/03_/03.md
+++ b/doc/03_/03.md
@@ -17,7 +17,7 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:<br>
 
 ### Pembuatan Project
 
-### Task Guide 1<br>
+### Task Guide 1
 
 
    ![contoh screenshot](img/Step1/1.png)<br>
@@ -33,7 +33,7 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:<br>
 
 
 <br><br>
-### Task Guide 2<br>
+### Task Guide 2
 
 
 	![contoh screenshot](img/Step2/1.png)<br>
@@ -49,7 +49,7 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:<br>
    
    
 <br><br>
-### Test Guide 3<br>
+### Test Guide 3
 
 
 	![contoh screenshot](img/Step3/1.png)<br>
