--- a/doc/03_Basic_Activity/03.md
+++ b/doc/03_Basic_Activity/03.md
@@ -16,31 +16,26 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
 
 ### Pembuatan Project
 
-1. Pertama, jalankan android studio, setelah itu terdapat pilihan pilih new project,kemudian pilih empty activity
+1. Pertama, jalankan android studio.<br><br>
 
 
-2. Kemudian atur konfigurasi project seperti dibawah.<br>
-	a)Name: BasicAppX <br>
-	b)Package name: org.aplas.basicappx <br>
-	c)Save Location: any <br>
-	d)Language: Java <br>
-	e)Minimum API Level: API 21/Android 5.0 Lollipop <br>
-	f)This project will support instant apps: Uncheck <br>
-	g)Use android.* artifacts: Check <br>
+2. Kemudian buka project BasicAppX yang telah kita buat sebelumnya.
    
 <br><br>
 ### Task Guide 1
 
-1. Ubah isi file build.gradle pada module:app sesuai pada module kemudian klik **sync gradle**
+1. Buatlah file baru dengan nama **Temperature** pada folder **org.aplas.basicappx**
 
    ![contoh screenshot](img/Step1/1.png)<br>
+
+2. Masukkan perintah pada **Temperature** sesuai seperti yang ada pada jobsheet.  
+
    ![contoh screenshot](img/Step1/2.png)<br>
 
-2. Delete ExampleUnitTest di org.aplas.basicapp dan copy file test dan lainnya kedalam folder, kemudian jalankan TestA1BasicUIX011
+3. Jalan kan file TestA1BasicUIX021
 
-   ![contoh screenshot](img/Step1/3.png)<br>
-   ![contoh screenshot](img/Step1/4.png)<br>
-
+	![contoh screenshot](img/Step1/3.png)<br>
+	![contoh screenshot](img/Step1/4.png)<br>
 
 <br><br>
 ### Task Guide 2
