--- a/doc/03_Basic_Activity/03.md
+++ b/doc/03_Basic_Activity/03.md
@@ -32,7 +32,7 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
 
    ![contoh screenshot](img/Step1/2.png)<br>
 
-3. Jalan kan file TestA1BasicUIX021
+3. Jalan kan file TestB1BasicUIX011
 
 	![contoh screenshot](img/Step1/3.png)<br>
 	![contoh screenshot](img/Step1/4.png)<br>
@@ -40,167 +40,147 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
 <br><br>
 ### Task Guide 2
 
-1. Buatlah folder font dalam direktori res, dan atur nama dan resource menjadi font
+1. Buatlah file baru dengan nama **Distance** pada folder **org.aplas.basicappx**
 
-	![contoh screenshot](img/Step2/1.png)<br>
+   ![contoh screenshot](img/Step2/1.png)<br>
 
-2. masukan file font kedalam folder font
+2. Masukkan perintah pada **Distance** sesuai seperti yang ada pada jobsheet.  
 
    ![contoh screenshot](img/Step2/2.png)<br>
 
-3. Atur file string di folder res/values seperti di bawah ini
+3. Jalan kan file TestB1BasicUIX021
 
-   ![contoh screenshot](img/Step2/3.png)<br>
-
-4. Atur file color di folder res/values seperti di bawah ini
-
-   ![contoh screenshot](img/Step2/4.png)<br>
-   
-5. Jalan kan file TestA1BasicUIX021
-
-	![contoh screenshot](img/Step2/5.png)<br>
-	![contoh screenshot](img/Step2/6.png)<br>
+	![contoh screenshot](img/Step2/3.png)<br>
+	![contoh screenshot](img/Step2/4.png)<br>
+	
 <br><br>
 ### Test Guide 3
 
-1. Buka activity_main.xml
+1. Buatlah file baru dengan nama **Weight** pada folder **org.aplas.basicappx**
 
-	![contoh screenshot](img/Step3/1.png)<br>
+   ![contoh screenshot](img/Step3/1.png)<br>
 
-2. Buatlah RelativeLayout dengan id mainLayout, dengan TextView(myTextView) dan Button(convertButton) didalamnya.
-	
-	![contoh screenshot](img/Step3/2.png)<br>
-		
-3. Pada xml editor, atur seperti yang ada pada modul.
-		
+2. Masukkan perintah pada **Weight** sesuai seperti yang ada pada jobsheet.  
+
+   ![contoh screenshot](img/Step3/2.png)<br>
+
+3. Jalan kan file TestB1BasicUIX031
+
 	![contoh screenshot](img/Step3/3.png)<br>
-
-4. Hasil akhir tampilannya akan seperti gambar dibawah.
-			
 	![contoh screenshot](img/Step3/4.png)<br>
-	
-5. Kemudian jalankan TestA1BasicUIX031.
-			
-	![contoh screenshot](img/Step3/5.png)<br>
-	![contoh screenshot](img/Step3/6.png)<br>
+
 <br><br>
 ### Test Guide 4
 
-1. Tambahkan space(space1) dan LinearLayout Horizontal(child1) pada mainLayout.
+1. Buka **MainActivity**
 
-	![contoh screenshot](img/Step4/1.png)<br>
-	
-2. Pada xml editor, atur seperti yang ada pada modul.	
+   ![contoh screenshot](img/Step4/1.png)<br>
 
-	![contoh screenshot](img/Step4/2.png)<br>
+2. Buatlah field sesuai yang ada pada Jobsheet.   
 
-3. Kemudian jalankan TestA1BasicUIX041.
-		
-	![contoh screenshot](img/Step4/3.png)<br>		
-	![contoh screenshot](img/Step4/4.png)<br>
-				
+   ![contoh screenshot](img/Step4/2.png)<br>
+   
+3. Buatlah Method **convertUnit** dan **strResult** sesuai yang ada pada jobsheet.   
+
+   ![contoh screenshot](img/Step4/3.png)<br>
+   ![contoh screenshot](img/Step4/4.png)<br>
+
+4. Jalan kan file TestB1BasicUIX041
+
+	![contoh screenshot](img/Step4/5.png)<br>	
 				
 <br><br>
 ### Test Guide 5
 
-1. Buka strings.xml dan tambahkan beberapa value seperti yang ada pada modul.
+1. Masih pada **MainActivity** pada method **onCreate** masukkkan code agar dapat memenuhi **Requirement** yang ada pada jobsheet seperti gambar dibawah.
 
-	![contoh screenshot](img/Step5/1.png)<br>
+   ![contoh screenshot](img/Step5/1.png)<br>
 
-2. Lalu didalam child1, tambahkan EditText(inputText), Spinner(oriList), TextView(myTextView2), EditText(outpurText), Spinner(convList).
-	
-	![contoh screenshot](img/Step5/2.png)<br>
+2. Dan pada method **onStart** masukkkan code agar dapat memenuhi **Requirement** yang ada pada jobsheet seperti gambar dibawah.   
 
-3. Pada xml editor, atur seperti yang ada pada modul.
-	
+   ![contoh screenshot](img/Step5/2.png)<br>
+   
+3. Jalan kan file TestB1BasicUIX051
+
 	![contoh screenshot](img/Step5/3.png)<br>
-	
-4. Kemudian jalankan TestA1BasicUIX051 dan TestA1BasicUIX052.	
-
-	![contoh screenshot](img/Step5/4.png)<br>
-	![contoh screenshot](img/Step5/5.png)<br>
-	![contoh screenshot](img/Step4/6.png)<br>
-
+	![contoh screenshot](img/Step5/4.png)<br>		
 
 <br><br>
 ### Test Guide 6
 
-1. Dibawah child1, tambahkan LinearLayout(child2) dan didalam child2 tambahkan CheckBox(chkRounded) dan CheckBox(chkFormula).
+1. Buka file **string.xml**.
 
-	![contoh screenshot](img/Step6/1.png)<br>
-	
-2. Pada xml editor, atur seperti yang ada pada modul.
+   ![contoh screenshot](img/Step6/1.png)<br>
 
-	![contoh screenshot](img/Step6/2.png)<br>
-	
-3. Kemudian jalankan TestA1BasicUIX061.
-	
-	![contoh screenshot](img/Step6/3.png)<br>
-	![contoh screenshot](img/Step6/4.png)<br>
+2. Lalu masukkan Value sesuai dengan yang ada pada jobsheet.   
+
+   ![contoh screenshot](img/Step6/2.png)<br>
+   
+3. Copy file **distance.png** dan **weight.png** pada folder **drawable**.   
+
+   ![contoh screenshot](img/Step6/3.png)<br>
+
+4. Buka **MainActivity** lalu masukkan perintah pada RadioGroup didalam Method **onCreate** agar memenuhi permintaan pada jobsheet.   
+
+   ![contoh screenshot](img/Step6/4.png)<br>
+   
+5. Copy file **ElementTest** dan **ResourceTest** kemudian jalan kan file TestB1BasicUIX061
+
+	![contoh screenshot](img/Step6/5.png)<br>
+	![contoh screenshot](img/Step6/6.png)<br>
+
 <br><br>
 ### Test Guide 7
 
-1. Dibawah child2, tambahkan RadioGroup(radioGroup) dengan 3 RadioButton didalamnya, masing-masing dengan id("rbTemp","rbDist",dan "rbWeight").
+1. Buatlah method **doConvert** sesuai Requirement yang ada pada jobsheet.
 
-	![contoh screenshot](img/Step7/1.png)<br>
-	
-2. Pada xml editor, atur seperti yang ada pada modul.
-	
+   ![contoh screenshot](img/Step7/1.png)<br>
+   
+2. Jalan kan file TestB1BasicUIX071
+
 	![contoh screenshot](img/Step7/2.png)<br>
-	
-3. Kemudian jalankan TestA1BasicUIX071.	
-
 	![contoh screenshot](img/Step7/3.png)<br>
-	![contoh screenshot](img/Step7/4.png)<br>
+
 <br><br>
 ### Test Guide 8
 
-1. Copy file "temperature.jpg" pada folder drawable.
+1. Buatlah Event Listener dibawah **unitType.setOnCheckedChangeListener** didalam method **onCreate**.
 
-	![contoh screenshot](img/Step8/1.png)<br>
+   ![contoh screenshot](img/Step8/1.png)<br>
+   
+2. Jalan kan file TestB1BasicUIX081
 
-2. Dibawah radioGroup, tambahkan ImageView(img).	
-	
 	![contoh screenshot](img/Step8/2.png)<br>
-
-3.	Pilih image "temperature.jpg"
-
 	![contoh screenshot](img/Step8/3.png)<br>
 
-4. 	Pada xml editor, atur seperti yang ada pada modul.
-
-	![contoh screenshot](img/Step8/4.png)<br>
-	
-5. Kemudian jalankan TestA1BasicUIX081 dan TestA1BasicUIX082.	
-	
-	![contoh screenshot](img/Step8/5.png)<br>
-	![contoh screenshot](img/Step8/6.png)<br>
 <br><br>
 ### Test Guide 9
 
-1. Copy file "cell_style.xml" dan “header_style.xml” pada folder drawable.
+1. pada **activiity_main** buat sebuah **ImageView** dengan ketentuan seperti yang ada pada Jobsheet.
 
-	![contoh screenshot](img/Step9/1.png)<br>
+   ![contoh screenshot](img/Step9/1.png)<br>
 
-2. 	Dibawah ImageView(img), tambahkan TableLayout(table) dan 3 TableRow didalamnya dengan masing-masing memiliki id("tv11","tv21",dan "tv31")<br>
-dan tambahkan 3 TextView didalam masing-masing TableRow.
- 
-	![contoh screenshot](img/Step9/2.png)<br>
+2. Atur dengan ketentuan seperti yang ada pada jobsheet.
 
-3. 	Pada xml editor, atur seperti yang ada pada modul.
-	
+   ![contoh screenshot](img/Step9/2.png)<br>
+    
+3. Jalan kan file TestB1BasicUIX091
+
 	![contoh screenshot](img/Step9/3.png)<br>
-
-5. Kemudian jalankan TestA1BasicUIX091 dan TestA1BasicUIX092.
-	
 	![contoh screenshot](img/Step9/4.png)<br>
-	![contoh screenshot](img/Step9/5.png)<br>
+
 <br><br>
 ### Hasil
 
 1. Jika sudah menjalankan semua guide build aplikasi(emulator/install via usb)
 
    ![contoh screenshot](img/Hasil/1.png)<br><br>
+   ![contoh screenshot](img/Hasil/2.png)<br><br>
+   ![contoh screenshot](img/Hasil/3.png)<br><br>
+   ![contoh screenshot](img/Hasil/4.png)<br><br>
+   ![contoh screenshot](img/Hasil/5.png)<br><br>
+   ![contoh screenshot](img/Hasil/6.png)<br><br>
+   ![contoh screenshot](img/Hasil/7.png)<br><br>
 
 
 ### Mohammad Ferry Julyo, 2020
