--- a/doc/03_Basic_Activity/03.md
+++ b/doc/03_Basic_Activity/03.md
@@ -1,4 +1,4 @@
-# Laporan Praktikum #2 - Layout
+# Laporan Praktikum #3 - Basic Activity
 
 
 ![Logo Polinema](img/polinema.png)<br>
@@ -7,10 +7,8 @@
 ## Tujuan Pembelajaran
 
 Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
-1. Mahasiswa memahami konsep layout pada android.
-2. Mahasiswa memahami konsep View Group dan Hierarchy pada layout.
-3. Mahasiswa mampu membuat layout sederhana
-4. Mahasiswa menguasai layout editor dan kegunaannya pada android studio.
+1. Mahasiswa memahami konsep dasar activity pada android.
+2. Mahasiswa mampu membuat activity pada android.
 
 ## Praktikum
 
