--- a/doc/05_Scrollview/05.md
+++ b/doc/05_Scrollview/05.md
@@ -92,6 +92,42 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
 
    ![contoh screenshot](img/Hasil/1.png)<br><br>
    ![contoh screenshot](img/Hasil/2.png)<br><br>
+   
+   
+### Question
+
+Question 1
+
+How many views can you use within a ScrollView? Choose one:
+
+    -One view only
+    -One view or one view group
+    -As many as you need
+
+Jawab : **Scrollview hanya dapat memiliki 1 child.**
+   ![contoh screenshot](img/Homework/6.png)<br>
+
+
+Question 2
+
+Which XML attribute do you use in a LinearLayout to show views side by side? Choose one:
+
+    -android:orientation="horizontal"
+    -android:orientation="vertical"
+    -android:layout_width="wrap_content"
+
+Jawab : **android:orientation="horizontal"**
+
+
+Question 3
+
+Which XML attribute do you use to define the width of the LinearLayout inside the scrolling view? Choose one:
+
+    -android:layout_width="wrap_content"
+    -android:layout_width="match_parent"
+    -android:layout_width="200dp"
+
+Jawab : **android:layout_width="match_parent"**
 
 
 ### Mohammad Ferry Julyo, 2020
