--- a/doc/06_Input_Control/06.md
+++ b/doc/06_Input_Control/06.md
@@ -104,6 +104,8 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
 ### Hasil
 
 1. Jika sudah menjalankan semua guide build aplikasi(emulator/install via usb)
+   
+   ![contoh screenshot](img/Step3/9.png)<br>
 
    ![contoh screenshot](img/Step3/8.png)<br>
    
