--- a/doc/07_DataBinding/07.md
+++ b/doc/07_DataBinding/07.md
@@ -7,31 +7,39 @@
 ## Tujuan Pembelajaran
 
 Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
-1. Mahasiswa mengerti cara membuat input control.
-2. Mahasiswa mengerti bagaimana cara membuat sebuah drop down menu.
-3. Mahasiswa mengerti bagaimana cara menerapkan input contorl di android studio.
+1. Mahasiswa mengerti bagaimana cara menggunakan kode XML untuk menambahkan beberapa elemen TextView.
+2. Mahasiswa mengerti bagaimana cara menggunakan kode XML untuk menentukan tampilan bergulir.
+3. Mahasiswa mengerti bagaimana cara menampilkan teks bentuk bebas dengan beberapa tag pemformatan HTML.
+4. Mahasiswa mengerti bagaimana memberi gaya pada warna latar belakang TextView dan warna teks.
+5. Mahasiswa mengerti bagaimana cara memasukkan tautan web ke dalam teks.
 
 ## Praktikum
 
-### Task : 1 
+### Pembuatan Project
 
-1. .<br>
+1. Pertama, buka android studio lalu buatlah project baru dan pilih **Add Blank Activity**.<br><br>
+
+
+2. Setting project dengan ketentuan seperti dibawah.<br>
    
    ![contoh screenshot](img/Step1/1.png)<br>
+   
+<br><br>
+### Task : 1 Add and edit TextView Elements
 
-2. .
+1. pada xml editor, buatlah sebuah **TextView** dengan ketentuan seperti pada tutorial.
 
    ![contoh screenshot](img/Step1/2.png)<br>
 
-3. .  
+2. Atur file **strings.xml** seperti gambar dibawah.  
 
    ![contoh screenshot](img/Step1/3.png)<br>
 
-4. .  
+3. Buatlah file **dimens.xml** dengan cara meng-extract(alt+enter) pada **android:padding** yang awalnya **10dp**.  
 
    ![contoh screenshot](img/Step1/4.png)<br>
 
-5. .  
+4. Atur **colors.xml**(optional).  
 
    ![contoh screenshot](img/Step1/5.png)<br>
 
@@ -52,13 +60,13 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
    ![contoh screenshot](img/Step1/13.png)<br>
 
 <br><br>
-### Task : 2 
+### Task : 2 Add a ScrollView and an active web link
 
-1.  .
+1.  Tambahkan attribute **autoLink** untuk menentukan link web.
 
    ![contoh screenshot](img/Step2/1.png)<br>
 
-2. .  
+2. Tambahkan sebuah **ScrollView** diantara heading dan subheading.  
 
    ![contoh screenshot](img/Step2/2.png)<br>
 
@@ -69,13 +77,13 @@ Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
    ![contoh screenshot](img/Step2/5.png)<br>
 	
 <br><br>
-### Task : 3 
+### Task : 3 Scroll multiple elements
 
-1.  .
+1.  Tambahkan sebuah **LinearLayout** didalam **ScrollView** dengan ketentuan seperti pada tutorial.
 
    ![contoh screenshot](img/Step3/1.png)<br>
 
-2. .  
+2. Hasil akhir aplikasi akan terlihat seperti gambar dibawah.  
 
    ![contoh screenshot](img/Step3/2.png)<br>
 
