--- a/doc/07_DataBinding/07.md
+++ b/doc/07_DataBinding/07.md
@@ -1,4 +1,4 @@
-# Laporan Praktikum #6 - Input Control
+# Laporan Praktikum #7 - Data Binding
 
 
 ![Logo Polinema](img/polinema.png)<br>
@@ -7,107 +7,103 @@
 ## Tujuan Pembelajaran
 
 Setelah menempuh materi percobaan ini, mahasiswa mampu mengenal:
-1. Mahasiswa mengerti bagaimana cara menggunakan kode XML untuk menambahkan beberapa elemen TextView.
-2. Mahasiswa mengerti bagaimana cara menggunakan kode XML untuk menentukan tampilan bergulir.
-3. Mahasiswa mengerti bagaimana cara menampilkan teks bentuk bebas dengan beberapa tag pemformatan HTML.
-4. Mahasiswa mengerti bagaimana memberi gaya pada warna latar belakang TextView dan warna teks.
-5. Mahasiswa mengerti bagaimana cara memasukkan tautan web ke dalam teks.
+1. Mahasiswa mengerti apa itu Data binding.
+2. Mahasiswa mengerti cara kerja Data binding.
+3. Mahasiswa dapat melakukan Data Binding pada project android studio.
 
 ## Praktikum
 
-### Pembuatan Project
+### Task : 1 
 
-1. Pertama, buka android studio lalu buatlah project baru dan pilih **Add Blank Activity**.<br><br>
-
-
-2. Setting project dengan ketentuan seperti dibawah.<br>
+1. .<br>
    
    ![contoh screenshot](img/Step1/1.png)<br>
-   
-<br><br>
-### Task : 1 Add and edit TextView Elements
 
-1. pada xml editor, buatlah sebuah **TextView** dengan ketentuan seperti pada tutorial.
+2. .
 
    ![contoh screenshot](img/Step1/2.png)<br>
 
-2. Atur file **strings.xml** seperti gambar dibawah.  
+3. .  
 
    ![contoh screenshot](img/Step1/3.png)<br>
 
-3. Buatlah file **dimens.xml** dengan cara meng-extract(alt+enter) pada **android:padding** yang awalnya **10dp**.  
-
-   ![contoh screenshot](img/Step1/4.png)<br>
-
-4. Atur **colors.xml**(optional).  
-
-   ![contoh screenshot](img/Step1/5.png)<br>
-
-   ![contoh screenshot](img/Step1/6.png)<br>
-
-   ![contoh screenshot](img/Step1/7.png)<br>
-
-   ![contoh screenshot](img/Step1/8.png)<br>
-
-   ![contoh screenshot](img/Step1/9.png)<br>
-
-   ![contoh screenshot](img/Step1/10.png)<br>
-
-   ![contoh screenshot](img/Step1/11.png)<br>
-
-   ![contoh screenshot](img/Step1/12.png)<br>
-
-   ![contoh screenshot](img/Step1/13.png)<br>
 
 <br><br>
-### Task : 2 Add a ScrollView and an active web link
+### Task : 2 
 
-1.  Tambahkan attribute **autoLink** untuk menentukan link web.
+1.  .
 
    ![contoh screenshot](img/Step2/1.png)<br>
 
-2. Tambahkan sebuah **ScrollView** diantara heading dan subheading.  
+2. .  
 
    ![contoh screenshot](img/Step2/2.png)<br>
 
    ![contoh screenshot](img/Step2/3.png)<br>
 
-   ![contoh screenshot](img/Step2/4.png)<br>
-
-   ![contoh screenshot](img/Step2/5.png)<br>
 	
 <br><br>
-### Task : 3 Scroll multiple elements
+### Task : 3 
 
-1.  Tambahkan sebuah **LinearLayout** didalam **ScrollView** dengan ketentuan seperti pada tutorial.
+1.  .
 
    ![contoh screenshot](img/Step3/1.png)<br>
 
-2. Hasil akhir aplikasi akan terlihat seperti gambar dibawah.  
+2. .  
 
    ![contoh screenshot](img/Step3/2.png)<br>
 
    ![contoh screenshot](img/Step3/3.png)<br>
 
-   ![contoh screenshot](img/Step3/4.png)<br>
 
-   ![contoh screenshot](img/Step3/5.png)<br>
+<br><br>
+### Task : 4 
+1. .   
+   ![contoh screenshot](img/Step4/1.png)<br>
 
-   ![contoh screenshot](img/Step3/6.png)<br>
+   ![contoh screenshot](img/Step4/2.png)<br>
 
-   ![contoh screenshot](img/Step3/7.png)<br>
+   ![contoh screenshot](img/Step4/3.png)<br>
 
-   ![contoh screenshot](img/Step3/8.png)<br>
+   ![contoh screenshot](img/Step4/4.png)<br>
+
+   ![contoh screenshot](img/Step4/5.png)<br>
+
+   ![contoh screenshot](img/Step4/6.png)<br>
+
+
+<br><br>
+### Task : 5
+1. .   
+   ![contoh screenshot](img/Step5/1.png)<br>
+
+   ![contoh screenshot](img/Step5/2.png)<br>
+
+
+<br><br>
+### Task : 6
+1. .   
+   ![contoh screenshot](img/Step6/1.png)<br>
+
+   ![contoh screenshot](img/Step6/2.png)<br>
+
+   ![contoh screenshot](img/Step6/3.png)<br>
+
+   ![contoh screenshot](img/Step6/4.png)<br>
 
 				
 <br><br>
 ### Hasil
 
 1. Jika sudah menjalankan semua guide build aplikasi(emulator/install via usb)
-   
-   ![contoh screenshot](img/Step3/9.png)<br>
 
-   ![contoh screenshot](img/Step3/8.png)<br>
+   ![contoh screenshot](img/Hasil/1.png)<br>
+
+   ![contoh screenshot](img/Hasil/2.png)<br>
+
+   ![contoh screenshot](img/Hasil/3.png)<br>
+   
+
    
    
 
